worksの作成途中経過、フォントをgooglefontsからnotosansjpを読み込むように、テストとしてスマホから読み込んでみる

--- a/style.css
+++ b/style.css
@@ -177,3 +177,22 @@ main{
     text-align: center;
     max-width: 300px;
 }
+
+.works-pickup {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    gap: 20px;
+}
+
+.work-img {
+    height: 200px;
+    width: auto;
+    border-radius: 10px;
+    display: block;
+}
+
+.work-card {
+    text-align: left;
+    max-width: 300px;
+}
