--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ body{
     flex-direction: column;
     padding-top: 65px;
     min-height: 100vh;
+    font-family: "Noto Sans JP", sans-serif;
 }
 
 .site-header{
@@ -193,6 +194,9 @@ main{
 }
 
 .work-card {
-    text-align: left;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
     max-width: 300px;
 }
