--- a/style.css
+++ b/style.css
@@ -23,16 +23,18 @@ body{
 
 .site-header{
     background-color: #FBB161;
-    padding: 15px 30px;
+    padding: 0 30px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
+    height: 9vh;
     z-index: 1000;
 }
 
 .header-container{
+    height: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
