ピックアップを完成させた

--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ body{
 
 .logo h1{
     color: white;
-    font-size: clamp(24px, 5vw, 60px);
+    font-size: 24px;
 }
 
 nav ul{
@@ -56,7 +56,7 @@ nav ul{
 nav ul li a{
     color: white;
     text-decoration: none;
-    font-size: clamp(16px, 5vw, 40px);
+    font-size: 16px;
 }
 
 nav ul li a:hover{
@@ -185,15 +185,14 @@ main{
 .works-pickup {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
     gap: 20px;
 }
 
 .work-img {
+    width: 100%;      /* カードの幅いっぱいに */
     height: 200px;
-    width: auto;
-    border-radius: 10px;
-    display: block;
+    object-fit: cover; /* 縦横比を保ちつつトリミング */
+    border-radius: 10%;
 }
 
 .work-card {
@@ -202,4 +201,26 @@ main{
     align-items: center;
     text-align: center;
     max-width: 300px;
+    padding-left: 15px;
+    padding-right: 15px;
+    padding-bottom: 20px;
+    padding-top: 30px;
+    border: 1px solid #ddd;
+    border-radius: 10px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    background-color: #ffffff;
+}
+
+.work-card h3 {
+    margin: 10px 0;
+    font-size: 24px;
+}
+
+.work-card a{
+    text-decoration: none;           /* 下線を消す */
+    color: #FBB161;                  /* リンクの色 */
+}
+
+.work-card a:hover {
+    color: #003b00;                  /* ホバー時の色 */
 }
