--- a/style.css
+++ b/style.css
@@ -10,7 +10,6 @@ html{
 
 html, body{
     height: 100%;
-    overflow-x: hidden;
 }
 
 body{
@@ -31,6 +30,8 @@ body{
     width: 100%;
     height: 9vh;
     z-index: 1000;
+    overflow: hidden;
+    pointer-events: none;
 }
 
 .header-container{
@@ -40,6 +41,7 @@ body{
     align-items: center;
     max-width: 12000px;
     margin: 0 auto;
+    pointer-events: auto;
 }
 
 .logo h1{
@@ -258,6 +260,16 @@ main{
     z-index: 1;
 }
 */
+
+.scroll-area-label {
+    position: relative;
+    top: 65px;
+    text-align: center;
+    font-size: 20px;
+    margin-bottom: 10px;
+    color: #333333;
+}
+
 .work-card-horizontal {
     z-index: 0;               /* カードの上に表示 */
     align-items: center;
